--- a/saves/scores/3.md
+++ b/saves/scores/3.md
@@ -1,5 +1,5 @@
-|    | metric   |     Train |      Test |
-|---:|:---------|----------:|----------:|
-|  0 | RMSE     | 0.0563441 | 0.0582217 |
-|  1 | R2       | 0.999919  | 0.999906  |
-|  2 | MAE      | 0.0469976 | 0.0465591 |
+| metric   |     Train |      Test |
+|:---------|----------:|----------:|
+| RMSE     | 0.0563441 | 0.0582217 |
+| R2       | 0.999919  | 0.999906  |
+| MAE      | 0.0469976 | 0.0465591 |
