--- a/DotProductApproach.ipynb
+++ b/DotProductApproach.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -639,27 +639,28 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>metric</th>\n",
        "      <th>Train</th>\n",
        "      <th>Test</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>metric</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>RMSE</td>\n",
+       "      <th>RMSE</th>\n",
        "      <td>0.056344</td>\n",
        "      <td>0.058222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>R2</td>\n",
+       "      <th>R2</th>\n",
        "      <td>0.999919</td>\n",
        "      <td>0.999906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MAE</td>\n",
+       "      <th>MAE</th>\n",
        "      <td>0.046998</td>\n",
        "      <td>0.046559</td>\n",
        "    </tr>\n",
@@ -668,13 +669,14 @@
        "</div>"
       ],
       "text/plain": [
-       "  metric     Train      Test\n",
-       "0   RMSE  0.056344  0.058222\n",
-       "1     R2  0.999919  0.999906\n",
-       "2    MAE  0.046998  0.046559"
+       "           Train      Test\n",
+       "metric                    \n",
+       "RMSE    0.056344  0.058222\n",
+       "R2      0.999919  0.999906\n",
+       "MAE     0.046998  0.046559"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,10 +696,23 @@
     "    prediction_test = torch.sum(embedding_market_test * embedding_derivative_test, dim=1)\n",
     "\n",
     "scores = pd.DataFrame({\n",
-    "    \"metric\": [\"RMSE\", \"R2\", \"MAE\"],\n",
-    "    \"Train\": [rmse(target_train, prediction_train), r2(target_train, prediction_train), mae(target_train, prediction_train)],\n",
-    "    \"Test\": [rmse(target_test, prediction_test), r2(target_test, prediction_test), mae(target_test, prediction_test)]\n",
+    "    \"metric\": [\n",
+    "        \"RMSE\", \n",
+    "        \"R2\", \n",
+    "        \"MAE\"\n",
+    "    ],\n",
+    "    \"Train\": [\n",
+    "        rmse(target_train, prediction_train), \n",
+    "        r2(target_train, prediction_train), \n",
+    "        mae(target_train, prediction_train)\n",
+    "    ],\n",
+    "    \"Test\": [\n",
+    "        rmse(target_test, prediction_test), \n",
+    "        r2(target_test, prediction_test), \n",
+    "        mae(target_test, prediction_test)\n",
+    "    ]\n",
     "})\n",
+    "scores = scores.set_index(\"metric\")\n",
     "scores.to_markdown(f\"saves/scores/{SESSION}.md\")\n",
     "scores.to_pickle(f\"saves/scores/{SESSION}.pckl\")\n",
     "scores"
@@ -705,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +747,7 @@
    "source": [
     "plt.hist(target, bins=100)\n",
     "plt.axvline(target.mean(), color='r')\n",
-    "rmse(target, np.zeros_like(target) + target.mean())"
+    "rmse(target, np.full_like(target, target.mean()))"
    ]
   }
  ],
